# qvf_withcontroller

./: .gitignore  README.md  README_中文.md
01_核心代码/: README_核心代码.md  pyproject.toml
01_核心代码/examples/: run_raw_input_example.py
01_核心代码/src/qvf_validity_admission/: __init__.py  _pipeline_core.py  admission.py  analysis_pipeline.py  answer_matching.py  answer_model_eval.py  answerability.py  controller.py  decisions.py  integration_eval.py  lifecycle.py  memory.py  pipeline.py  public_answer_eval.py  public_dataset_adapters.py  public_extraction.py  query_risk_router.py  raw_input.py  retrieval.py  semantic_relations.py  service.py  stale400_adapter.py  targeted_benchmark.py  temporal_validity.py
01_核心代码/tests/: test_core_smoke.py  test_public_answer_eval.py  test_query_risk_router.py  test_validity_admission_pipeline.py
02_结果证据/: 发布验证.json  结果总表.csv  结果摘要.md
02_结果证据/LoCoMo79/: public_answer_cases.csv  public_answer_report_zh.md  public_answer_summary.json
02_结果证据/LongMemEval500/: public_answer_cases.csv  public_answer_report_zh.md  public_answer_summary.json
02_结果证据/MemConflict100/: memconflict100_full_currentcode_pairwise_cases.csv  memconflict100_full_currentcode_report.md  public_answer_summary.json
02_结果证据/STALE400/: stale400_currentcode_control_ablation_report.md  stale400_currentcode_control_ablation_summary.json  stale400_currentcode_control_ablation_table.csv
03_说明文档/: 代码结构说明.md  后续讨论点.md  本周研究进展.md  相关工作与下一步.md  系统架构与代码流程.md  结果摘要与证据边界.md  证据边界与已知限制.md
