[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qvf-validity-admission"
version = "0.3.0.dev1"
description = "Query-conditioned post-retrieval longitudinal-memory validity controller."
readme = "README_核心代码.md"
requires-python = ">=3.10"
authors = [
  { name = "Jeremy Zhong" }
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["qvf_validity_admission*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
